# BlueMatImaging

./: .gitignore
flexBox_cpp/: README.md
flexBox_cpp/doxygen/: .gitignore
flexBox_cpp/doxygen/html/: formula.repository  index.html
flexBox_cpp/doxygen/latex/: index.tex  refman.aux  refman.idx  refman.ind  refman.tex  refman.toc
flexBox_cpp/source/: CMakeLists.txt  FUBC.txt  flexBox.h  tools.h
flexBox_cpp/source/bindings/: CMakeLists.txt  flexBoxPy.cpp  tests.py
flexBox_cpp/source/data/: flexBoxData.h
flexBox_cpp/source/examples/: exampleROF.cpp  exampleSegmentation.cpp
flexBox_cpp/source/motionEstimation/: L1TVMassPreservation.h  L2L2OpticalFlow.h  basicOpticalFlow.h
flexBox_py/: __init__.py  wrapper.py
inverse_problems/TimonTests/: TimonTest.py
inverse_problems/image_reconstruction/: denoising.py  image_reconstruction.py
inverse_problems/image_tools/: shortened_image2_1.npy  translated_image.npy  translation.py  translation2_1.py  v_x_2_1.npy
inverse_problems/joint_image_motion_approach/: TV-L2MassPreservation.py  TV-L2OpticalFlow.py  TV-TVMassPreservation.py  TV-TVOpticalFlow.py
inverse_problems/main_test_file/: main_test_file.py  questions.py
inverse_problems/motion_estimation/: L1-TVMassPreservation.py  L1-TVMassPreservationBlueMatExample.py  L1-TVOpticalFlow.py  L2-L2MassPreservation.py  L2-L2OpticalFlow.py  L2-L2OpticalFlowBlueMatExample.py  L2-TVMassPreservation.py  L2-TVOpticalFlow.py  L2-TVOpticalFlowBlueMatExample.py  L2-TVOpticalFlowNoisy.py  example.py  shortened_image.npy  translated_image2_1.npy  v_y_2_1.npy
(+36 files in other folders)
